--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "flash",
   "version": "1.0.0",
+  "repository":"git@github.com:ExC0d3/Flash.git"
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Abhinav Sharma",
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.2",
