--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flash",
   "version": "1.0.0",
-  "repository":"git@github.com:ExC0d3/Flash.git"
-  "description": "",
+  "repository":"git@github.com:ExC0d3/Flash.git",
+  "description": "Remove junk files from your torrent directories",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
